# nsforge-mcp

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  FORMULA_APIS.md  README.md  README.zh-TW.md  ROADMAP.md  pyproject.toml  pyproject.toml.template
.claude/skills/nsforge-code-generation/: SKILL.md
.claude/skills/nsforge-derivation-workflow/: SKILL.md
.claude/skills/nsforge-formula-management/: SKILL.md
.claude/skills/nsforge-formula-search/: SKILL.md
.claude/skills/nsforge-quick-calculate/: SKILL.md
.claude/skills/nsforge-usolver-collab/: SKILL.md
.claude/skills/nsforge-verification-suite/: SKILL.md
.github/: copilot-instructions.md
derivation_sessions/: session_18947cb7.json  session_37e9f2bb.json  session_5d1c7f9a.json  session_5ecf5e12.json  session_759ded1c.json  session_777573ca.json  session_881df03b.json  session_9ed14ddb.json  session_c8cbb753.json  session_ce30161d.json  session_d6ae10b2.json  session_fd115eaf.json
docs/: TYPE_CHECKING_STATUS.md  cognitive-load-solution.md  completeness-challenge.md  composable-formula-modification-engine.md  design-evolution-derivation-framework.md  domain-audio-circuits.md  missing-features-priority.md  nsforge-skills-guide.md  nsforge-vs-sympy-mcp.md  phase1-implementation-report.md  phase1-quick-reference.md  phase2-implementation-report.md  reproducible-derivation-tools.md  symbolic-reasoning-mcp-design.md  sympy-coverage-analysis.md  template-system-design.md  value-proposition-analysis.md
docs/examples/: fentanyl-pharmacokinetics.md  fentanyl-with-modifications.md  power-amp-coupling-capacitor.md
examples/: aortic_valve_area_aline.py  npo_antibiotic_analysis.py  physiological_vd_model.py
formulas/: README.md  README.zh-TW.md
formulas/derivations/: README.md
formulas/derivations/hemodynamics/: aortic_valve_area_from_aline.md
formulas/derivations/pharmacokinetics/: fat_adjusted_vd.md  multiple_competitive_agonists.md  npo_antibiotic_effect.md  physiological_vd_body_composition.md  temp_corrected_elimination.md  temp_corrected_michaelis_menten.md
formulas/derived/: 37e9f2bb.yaml  5d1c7f9a.yaml  759ded1c.yaml  881df03b.yaml  9ed14ddb.yaml  c8cbb753.yaml  ce30161d.yaml
memory-bank/: activeContext.md  architect.md  decisionLog.md  productContext.md  progress.md  projectBrief.md  systemPatterns.md
src/nsforge/: __init__.py
src/nsforge/application/: __init__.py  use_cases.py
src/nsforge/domain/: __init__.py  derivation_session.py  entities.py  formula.py  services.py  (+1 more)
src/nsforge_mcp/: __init__.py  server.py
templates/archive/: README.md
tests/: __init__.py  demo_crud.py  test_aortic_valve_area.py  test_derivation_engine.py  test_derivation_unicode.py  test_domain.py  test_music_tools.py  test_phase1_tools.py  test_phase2_tools.py  test_registry.py  test_step_crud.py  test_sympy_engine.py
(+19 files in other folders)
