[project]
name = "nsforge-mcp"
version = "0.1.0"
description = "Neurosymbolic Forge - Where Neural Meets Symbolic. MCP Server for precise symbolic reasoning with AI agents."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [
    { name = "NSForge Team" }
]
keywords = [
    "mcp",
    "symbolic-reasoning",
    "neural-symbolic",
    "sympy",
    "ai-agents",
    "model-context-protocol",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core symbolic computation
    "sympy>=1.13",
    # MCP SDK with FastMCP
    "mcp>=1.0.0",
    # Data validation
    "pydantic>=2.0",
    # YAML parsing for DSL
    "pyyaml>=6.0",
    "pint>=0.25.2",
    "scipy>=1.16.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
nsforge-mcp = "nsforge_mcp.server:main"

[project.urls]
Homepage = "https://github.com/u9401066/nsforge-mcp"
Documentation = "https://github.com/u9401066/nsforge-mcp/tree/master/docs"
Repository = "https://github.com/u9401066/nsforge-mcp"
Issues = "https://github.com/u9401066/nsforge-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nsforge", "src/nsforge_mcp"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["nsforge", "nsforge_mcp"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

# MCP 工具裝飾器沒有完整類型標註，允許未標註的裝飾器
disallow_untyped_decorators = false

# 允許第三方庫缺少類型標註
[[tool.mypy.overrides]]
module = [
    "sympy.*",
    "mcp.*",
    "yaml.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"
